correct maintainer e-mail

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "authors": [
         {
             "name": "Chris Sternal-Johnson",
-            "email": "chris@gripmedia.com"
+            "email": "chris@sternal-johnson.com"
         }
     ],
     "require": {
