--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "4.0.x",
-		"99designs/phumbor": "dev-master"
+        "illuminate/support": "4.*",
+        "99designs/phumbor": "dev-master"
     },
     "autoload": {
         "classmap": [
