--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "r0bdiablo/laravel5-phumbor",
+    "name": "tectiv3/laravel5-phumbor",
     "description": "Laravel 5 package adding support for the Phumbor PHP library for Thumbor.",
-	"homepage": "https://github.com/r0bdiablo/laravel5-phumbor",
+	"homepage": "https://github.com/tectiv3/laravel5-phumbor",
 	"license": "MIT",
 	"keywords": ["laravel", "phumbor", "thumbor"],
     "authors": [
@@ -13,15 +13,11 @@
     "require": {
         "php": ">=5.3.0",
         "illuminate/support": "5.*",
-        "99designs/phumbor": "1.2.*"
+        "99designs/phumbor": "~1.2.*"
     },
     "autoload": {
-        "classmap": [
-            "src/migrations"
-        ],
         "psr-0": {
-            "R0bdiabl0\\Laravel5Phumbor": "src/"
+            "tectiv3\\Phumbor": "src/"
         }
-    },
-    "minimum-stability": "dev"
+    }
 }
